@@ -219,6 +219,22 @@ typedef struct {
 
 #ifdef Win32
 #include <graphapp/ga.h>
+
+typedef struct {
+    window wprog;
+    progressbar pb;
+    label l_url;
+    RCNTXT cntxt;
+} winprogressbar;
+
+static void doneprogressbar(void *data)
+{
+    winprogressbar *pbar = data;
+    hide(pbar->wprog);
+    del(pbar->l_url);
+    del(pbar->pb);
+    del(pbar->wprog);    
+}
 #endif
 
 /* download(url, destfile, quiet, mode, cacheOK) */
@@ -231,11 +247,8 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
     char *url, *file, *mode;
     int quiet, status = 0, cacheOK;
 #ifdef Win32
-    window wprog;
-    progressbar pb;
-    label l_url;
+    winprogressbar pbar;
 #endif
-
 
     checkArity(op, args);
     scmd = CAR(args); args = CDR(args);
@@ -302,17 +315,21 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 #ifdef Win32
 	    if (guess <= 0) guess = 100 * 1024;
 	    R_FlushConsole();
-	    wprog = newwindow(_("Download progress"), rect(0, 0, 540, 100),
+	    pbar.wprog = newwindow(_("Download progress"), rect(0, 0, 540, 100),
 			      Titlebar | Centered);
-	    setbackground(wprog, dialog_bg());
+	    setbackground(pbar.wprog, dialog_bg());
 	    strcpy(buf, "URL: ");
 	    if(strlen(url) > 60) {
 		strcat(buf, "... ");
 		strcat(buf, url + (strlen(url) - 60));
 	    } else strcat(buf, url);
-	    l_url = newlabel(buf, rect(10, 15, 520, 25), AlignCenter);
-	    pb = newprogressbar(rect(20, 50, 500, 20), 0, guess, 1024, 1);
-	    show(wprog);
+	    pbar.l_url = newlabel(buf, rect(10, 15, 520, 25), AlignCenter);
+	    pbar.pb = newprogressbar(rect(20, 50, 500, 20), 0, guess, 1024, 1);
+	    show(pbar.wprog);
+	    begincontext(&(pbar.cntxt), CTXT_CCODE, R_NilValue, R_NilValue,
+			 R_NilValue, R_NilValue, R_NilValue);
+	    pbar.cntxt.cend = &doneprogressbar;
+	    pbar.cntxt.cenddata = &pbar;
 #endif
 	    while ((len = in_R_HTTPRead(ctxt, buf, sizeof(buf))) > 0) {
 		fwrite(buf, 1, len, out);
@@ -320,9 +337,9 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 #ifdef Win32
 		if(nbytes > guess) {
 		    guess *= 2;
-		    setprogressbarrange(pb, 0, guess);
+		    setprogressbarrange(pbar.pb, 0, guess);
 		}
-		setprogressbar(pb, nbytes);
+		setprogressbar(pbar.pb, nbytes);
 #else
 		if(!quiet) {
 		    if(guess <= 0) putdots(&ndots, nbytes/1024);
@@ -343,10 +360,8 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 	    }
 #ifdef Win32
 	    R_FlushConsole();
-	    hide(wprog);
-	    del(l_url);
-	    del(pb);
-	    del(wprog);
+	    doneprogressbar(&pbar);
+	    endcontext(&(pbar.cntxt));
 #endif
 	    if (total > 0 && total != nbytes)
 		warning(_("downloaded length %d != reported length %d"),
@@ -381,17 +396,24 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 #ifdef Win32
 	    if (guess <= 0) guess = 100 * 1024;
 	    R_FlushConsole();
-	    wprog = newwindow(_("Download progress"), rect(0, 0, 540, 100),
+	    pbar.wprog = newwindow(_("Download progress"), rect(0, 0, 540, 100),
 			      Titlebar | Centered);
-	    setbackground(wprog, LightGrey);
+	    setbackground(pbar.wprog, LightGrey);
 	    strcpy(buf, "URL: ");
 	    if(strlen(url) > 60) {
 		strcat(buf, "... ");
 		strcat(buf, url + (strlen(url) - 60));
 	    } else strcat(buf, url);
-	    l_url = newlabel(buf, rect(10, 15, 520, 25), AlignCenter);
-	    pb = newprogressbar(rect(20, 50, 500, 20), 0, guess, 1024, 1);
-	    show(wprog);
+	    pbar.l_url = newlabel(buf, rect(10, 15, 520, 25), AlignCenter);
+	    pbar.pb = newprogressbar(rect(20, 50, 500, 20), 0, guess, 1024, 1);
+	    show(pbar.wprog);
+
+	    /* set up a context which will close progressbar on error. */
+	    begincontext(&(pbar.cntxt), CTXT_CCODE, R_NilValue, R_NilValue,
+			 R_NilValue, R_NilValue, R_NilValue);
+	    pbar.cntxt.cend = &doneprogressbar;
+	    pbar.cntxt.cenddata = &pbar;
+	    
 #endif
 	    while ((len = in_R_FTPRead(ctxt, buf, sizeof(buf))) > 0) {
 		fwrite(buf, 1, len, out);
@@ -399,9 +421,9 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 #ifdef Win32
 		if(nbytes > guess) {
 		    guess *= 2;
-		    setprogressbarrange(pb, 0, guess);
+		    setprogressbarrange(pbar.pb, 0, guess);
 		}
-		setprogressbar(pb, nbytes);
+		setprogressbar(pbar.pb, nbytes);
 #else
 		if(!quiet) {
 		    if(guess <= 0) putdots(&ndots, nbytes/1024);
@@ -422,10 +444,8 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 	    }
 #ifdef Win32
 	    R_FlushConsole();
-	    hide(wprog);
-	    del(l_url);
-	    del(pb);
-	    del(wprog);
+	    doneprogressbar(&pbar);
+	    endcontext(&(pbar.cntxt));
 #endif
 	    if (total > 0 && total != nbytes)
 		warning(_("downloaded length %d != reported length %d"),
