@@ -4,6 +4,14 @@
 See the file NEWS for changes that affect all versions of R.
 
 
+R 2.1.1 patched
+===============
+
+The progress bar was being left behind when a download was aborted.
+(PR#7964).
+
+
+
 R 2.1.1
 =======
 
